--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^1.2.0",
+    "node-sass": "^5.0.0",
     "postcss": "^8.2.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
